# alliance-management

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  renovate.json  taskfile.yaml  tsconfig.json
.github/workflows/: build-pr-docker.yaml  deploy-docker.yaml
config/: database.py  gunicorn.conf.py  settings.py  urls.py
core/: adapters.py  admin.py  audit.py  context_processors.py  helpers.py  models.py  rotation_audit.py  signals.py  views.py
core/audit/: comment.py  context.py  helpers.py  player.py  rotation.py
core/authorization/: decorators.py  permissions.py  roles.py
core/migrations/: 0001_initial.py  0002_auditlog_message.py  0002_comment.py  0002_storedimage_imageattachment.py  0003_alter_trainrotationentry_options.py  0003_comment_deleted_at_comment_deleted_by.py  0004_playersyncrun.py
core/models/: __init__.py  auditlog.py  comment.py  comment_api.py  player.py  train.py
core/services/: game_client.py  player_sync.py
core/templatetags/: alliance_status_tags.py  audit_tags.py  rank_tags.py
core/views/: api_comment_add.py  (+17 more)
docker/: entrypoint.sh  player_sync.sh
examples/: docker-compose-rootless.yml  docker-compose.yml
helpers/: env.py
scripts/: import_members_from_json.py
templates/: 403.html  audit_logs.html  base.html  comment_delete.html  home.html  login_start.html  member_overview.html  non_member_overview.html  player_detail.html  player_search.html  players.html  rotation.html
typescript/: comment_delete.ts  errors.ts  misc.ts  models.ts  player_detail.ts  rotation.ts
(+15 files in other folders)
