[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "alliance-management"
version = "0.0.1"
description = "Alliance Management tool for managing Last War alliances"
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "django>=6.0.5",
    "django-allauth[socialaccount]>=65.17.0",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "sentry-sdk>=2.61.1",
    "whitenoise>=6.12.0",
]
